--- a/Kismat App/MainViewController/Xibs/GeneralHeaderTVCell.xib
+++ b/Kismat App/MainViewController/Xibs/GeneralHeaderTVCell.xib
@@ -196,18 +196,18 @@
                                         <rect key="frame" x="306" y="36" width="35" height="20"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Vbi-XH-pNM">
-                                                <rect key="frame" x="9.6666666666666856" y="2.3333333333333384" width="15" height="14.666666666666664"/>
+                                                <rect key="frame" x="9.6666666666666661" y="2.333333333333333" width="22" height="22"/>
                                                 <color key="tintColor" name="Primary Yellow"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="15" id="L8c-U3-1X1"/>
-                                                    <constraint firstAttribute="width" constant="15" id="U6X-VB-awF"/>
+                                                    <constraint firstAttribute="height" constant="22.333333333333325" id="L8c-U3-1X1"/>
+                                                    <constraint firstAttribute="width" constant="22" id="U6X-VB-awF"/>
                                                 </constraints>
                                             </imageView>
                                         </subviews>
-                                        <color key="backgroundColor" name="Secondary Grey"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstItem="Vbi-XH-pNM" firstAttribute="centerX" secondItem="Ba0-Xg-o6E" secondAttribute="centerX" constant="-0.33333333333331439" id="DKe-NL-rqb"/>
-                                            <constraint firstItem="Vbi-XH-pNM" firstAttribute="centerY" secondItem="Ba0-Xg-o6E" secondAttribute="centerY" id="RUQ-hl-Nck"/>
+                                            <constraint firstItem="Vbi-XH-pNM" firstAttribute="centerX" secondItem="Ba0-Xg-o6E" secondAttribute="centerX" constant="3.1666666666666643" id="DKe-NL-rqb"/>
+                                            <constraint firstItem="Vbi-XH-pNM" firstAttribute="centerY" secondItem="Ba0-Xg-o6E" secondAttribute="centerY" constant="3.8333333333333286" id="RUQ-hl-Nck"/>
                                             <constraint firstAttribute="width" constant="35" id="sOr-Bh-vBM"/>
                                             <constraint firstAttribute="height" constant="20" id="upN-aO-DoG"/>
                                         </constraints>
