--- a/Kismat App/MainViewController/Xibs/SocialAccTVCell.xib
+++ b/Kismat App/MainViewController/Xibs/SocialAccTVCell.xib
@@ -25,25 +25,6 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JBx-0C-JSa">
                                 <rect key="frame" x="23" y="4" width="290" height="32"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tamara Pensiero" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vAq-Op-8kN" customClass="fullyCustomLbl" customModule="Kismat_App" customModuleProvider="target">
-                                        <rect key="frame" x="50" y="6" width="206" height="21"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="206" id="SbH-s5-dJq"/>
-                                            <constraint firstAttribute="height" constant="21" id="n4q-eS-gMX"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                        <userDefinedRuntimeAttributes>
-                                            <userDefinedRuntimeAttribute type="color" keyPath="txtColor">
-                                                <color key="value" name="Text grey"/>
-                                            </userDefinedRuntimeAttribute>
-                                            <userDefinedRuntimeAttribute type="number" keyPath="txtSize">
-                                                <real key="value" value="12"/>
-                                            </userDefinedRuntimeAttribute>
-                                            <userDefinedRuntimeAttribute type="boolean" keyPath="isFontWork" value="NO"/>
-                                        </userDefinedRuntimeAttributes>
-                                    </label>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LinkedIn" translatesAutoresizingMaskIntoConstraints="NO" id="DRK-EB-vxd">
                                         <rect key="frame" x="8" y="4" width="25" height="25"/>
                                         <constraints>
@@ -51,17 +32,33 @@
                                             <constraint firstAttribute="width" constant="25" id="xfN-hi-oLT"/>
                                         </constraints>
                                     </imageView>
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4Du-xK-9Cz" customClass="FormTextField" customModule="Kismat_App" customModuleProvider="target">
+                                        <rect key="frame" x="50" y="6" width="206" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="21" id="eSD-6h-JKL"/>
+                                            <constraint firstAttribute="width" constant="206" id="mJ6-SM-xUM"/>
+                                        </constraints>
+                                        <color key="textColor" name="Text grey"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="txtSize">
+                                                <real key="value" value="16"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </textField>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="DRK-EB-vxd" firstAttribute="leading" secondItem="JBx-0C-JSa" secondAttribute="leading" constant="8" id="4yP-ph-t6U"/>
-                                    <constraint firstItem="vAq-Op-8kN" firstAttribute="leading" secondItem="DRK-EB-vxd" secondAttribute="trailing" constant="17" id="7V2-hf-cwP"/>
                                     <constraint firstAttribute="height" constant="32" id="F9k-CA-2iA"/>
                                     <constraint firstAttribute="bottom" secondItem="DRK-EB-vxd" secondAttribute="bottom" constant="3" id="LR4-Oj-0vX"/>
+                                    <constraint firstItem="4Du-xK-9Cz" firstAttribute="top" secondItem="JBx-0C-JSa" secondAttribute="top" constant="6" id="M7M-Qo-kIn"/>
+                                    <constraint firstItem="4Du-xK-9Cz" firstAttribute="leading" secondItem="DRK-EB-vxd" secondAttribute="trailing" constant="17" id="NVs-Ov-5VO"/>
                                     <constraint firstItem="DRK-EB-vxd" firstAttribute="top" secondItem="JBx-0C-JSa" secondAttribute="top" constant="4" id="Pdg-F6-E0m"/>
                                     <constraint firstAttribute="width" constant="290" id="Py5-Hb-Jfs"/>
-                                    <constraint firstAttribute="bottom" secondItem="vAq-Op-8kN" secondAttribute="bottom" constant="5" id="c7R-QN-One"/>
-                                    <constraint firstItem="vAq-Op-8kN" firstAttribute="top" secondItem="JBx-0C-JSa" secondAttribute="top" constant="6" id="gXk-u5-U5P"/>
+                                    <constraint firstAttribute="bottom" secondItem="4Du-xK-9Cz" secondAttribute="bottom" constant="5" id="Zmu-fB-uZs"/>
+                                    <constraint firstAttribute="trailing" secondItem="4Du-xK-9Cz" secondAttribute="trailing" constant="34" id="gcC-S0-dIv"/>
                                 </constraints>
                             </view>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sj1-7I-mkD" customClass="RoundCornerButton" customModule="Kismat_App" customModuleProvider="target">
@@ -111,7 +108,7 @@
             <connections>
                 <outlet property="removeBtn" destination="sj1-7I-mkD" id="okx-NP-kmR"/>
                 <outlet property="socialImgView" destination="DRK-EB-vxd" id="MSx-He-xYx"/>
-                <outlet property="socialLbl" destination="vAq-Op-8kN" id="b3j-JO-tCI"/>
+                <outlet property="socialLbl" destination="4Du-xK-9Cz" id="vZY-ge-43t"/>
             </connections>
             <point key="canvasLocation" x="54.198473282442748" y="13.380281690140846"/>
         </tableViewCell>
@@ -119,9 +116,6 @@
     <designables>
         <designable name="sj1-7I-mkD">
             <size key="intrinsicContentSize" width="13.666666666666666" height="22"/>
-        </designable>
-        <designable name="vAq-Op-8kN">
-            <size key="intrinsicContentSize" width="126.33333333333333" height="20.333333333333332"/>
         </designable>
     </designables>
     <resources>
