--- a/Kismat App/MainViewController/Xibs/TagsTVCell.xib
+++ b/Kismat App/MainViewController/Xibs/TagsTVCell.xib
@@ -13,7 +13,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="85" id="KGk-i7-Jjw" customClass="TagsTVCell" customModule="Kismat_App" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="85" id="KGk-i7-Jjw" customClass="TagsTVCell" customModule="Kismat_App" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="85"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -384,34 +384,34 @@
     </objects>
     <designables>
         <designable name="0Sd-rE-NEW">
-            <size key="intrinsicContentSize" width="99.666666666666671" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="59" height="12"/>
         </designable>
         <designable name="9xd-B0-2lT">
-            <size key="intrinsicContentSize" width="14.333333333333334" height="22"/>
+            <size key="intrinsicContentSize" width="14.333333333333334" height="19"/>
         </designable>
         <designable name="KRO-RN-hKA">
-            <size key="intrinsicContentSize" width="99.666666666666671" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="59" height="12"/>
         </designable>
         <designable name="Qjk-Gm-fBb">
-            <size key="intrinsicContentSize" width="14.333333333333334" height="22"/>
+            <size key="intrinsicContentSize" width="14.333333333333334" height="19"/>
         </designable>
         <designable name="ZIc-mR-nvd">
-            <size key="intrinsicContentSize" width="14.333333333333334" height="22"/>
+            <size key="intrinsicContentSize" width="14.333333333333334" height="19"/>
         </designable>
         <designable name="cre-uA-K6R">
-            <size key="intrinsicContentSize" width="14.333333333333334" height="22"/>
+            <size key="intrinsicContentSize" width="14.333333333333334" height="19"/>
         </designable>
         <designable name="dSR-YM-i50">
-            <size key="intrinsicContentSize" width="14.333333333333334" height="22"/>
+            <size key="intrinsicContentSize" width="14.333333333333334" height="19"/>
         </designable>
         <designable name="gtx-C5-zbC">
-            <size key="intrinsicContentSize" width="103" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="63.333333333333336" height="12"/>
         </designable>
         <designable name="muH-6z-pUN">
-            <size key="intrinsicContentSize" width="41" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="25" height="12"/>
         </designable>
         <designable name="xFn-pr-x5z">
-            <size key="intrinsicContentSize" width="41" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="25" height="12"/>
         </designable>
     </designables>
     <resources>
