--- a/Kismat App/Views/ViewControllers/Feed/Xibs/FeedItemsTVCell.xib
+++ b/Kismat App/Views/ViewControllers/Feed/Xibs/FeedItemsTVCell.xib
@@ -90,7 +90,7 @@
                                     </label>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="sDz-s6-jzy">
                                         <rect key="frame" x="304" y="18.666666666666668" width="25" height="24.666666666666661"/>
-                                        <color key="tintColor" name="Primary Yellow"/>
+                                        <color key="tintColor" name="warning"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="25" id="5gY-fR-AX7"/>
                                             <constraint firstAttribute="height" constant="25" id="aFa-sk-hd2"/>
@@ -116,7 +116,7 @@
                                                                 <color key="value" name="Text grey"/>
                                                             </userDefinedRuntimeAttribute>
                                                             <userDefinedRuntimeAttribute type="number" keyPath="txtSize">
-                                                                <real key="value" value="8"/>
+                                                                <real key="value" value="10"/>
                                                             </userDefinedRuntimeAttribute>
                                                             <userDefinedRuntimeAttribute type="boolean" keyPath="isFontWork" value="NO"/>
                                                             <userDefinedRuntimeAttribute type="string" keyPath="txtStroke" value="l"/>
@@ -153,7 +153,7 @@
                                                                 <color key="value" name="Text grey"/>
                                                             </userDefinedRuntimeAttribute>
                                                             <userDefinedRuntimeAttribute type="number" keyPath="txtSize">
-                                                                <real key="value" value="8"/>
+                                                                <real key="value" value="10"/>
                                                             </userDefinedRuntimeAttribute>
                                                             <userDefinedRuntimeAttribute type="boolean" keyPath="isFontWork" value="NO"/>
                                                             <userDefinedRuntimeAttribute type="string" keyPath="txtStroke" value="l"/>
@@ -284,22 +284,22 @@
     </objects>
     <designables>
         <designable name="0FG-gI-S06">
-            <size key="intrinsicContentSize" width="122.66666666666667" height="12"/>
+            <size key="intrinsicContentSize" width="211" height="20.333333333333332"/>
         </designable>
         <designable name="TnH-JF-VfZ">
-            <size key="intrinsicContentSize" width="25.333333333333332" height="9.6666666666666661"/>
+            <size key="intrinsicContentSize" width="53.666666666666664" height="20.333333333333332"/>
         </designable>
         <designable name="dQH-13-OzP">
-            <size key="intrinsicContentSize" width="47" height="9.6666666666666661"/>
+            <size key="intrinsicContentSize" width="99.666666666666671" height="20.333333333333332"/>
         </designable>
         <designable name="gAw-H9-ySR">
-            <size key="intrinsicContentSize" width="63" height="16.666666666666668"/>
+            <size key="intrinsicContentSize" width="77.666666666666671" height="20.333333333333332"/>
         </designable>
         <designable name="rdD-aP-nm5">
             <size key="intrinsicContentSize" width="407" height="612"/>
         </designable>
         <designable name="s8f-h1-ksg">
-            <size key="intrinsicContentSize" width="115" height="16.666666666666668"/>
+            <size key="intrinsicContentSize" width="139.66666666666666" height="20.333333333333332"/>
         </designable>
     </designables>
     <resources>
@@ -313,6 +313,9 @@
         </namedColor>
         <namedColor name="Text grey">
             <color red="0.20800000429153442" green="0.31000000238418579" blue="0.35699999332427979" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="warning">
+            <color red="1" green="0.80784313725490198" blue="0.30980392156862746" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
