--- a/Kismat App/MainViewController/Xibs/GeneralHeaderTVCell.xib
+++ b/Kismat App/MainViewController/Xibs/GeneralHeaderTVCell.xib
@@ -25,7 +25,7 @@
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gT6-92-Go5">
                                 <rect key="frame" x="8" y="18" width="359" height="50"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nax-I1-dp4" customClass="RoundCornerButton" customModule="Kismat_App" customModuleProvider="target">
+                                    <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nax-I1-dp4" customClass="RoundCornerButton" customModule="Kismat_App" customModuleProvider="target">
                                         <rect key="frame" x="8" y="10" width="30" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="30" id="fTw-de-KOl"/>
@@ -34,8 +34,8 @@
                                         <color key="tintColor" name="Secondary Grey"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal">
-                                            <imageReference key="image" image="girl" symbolScale="medium"/>
-                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="medium" weight="medium"/>
+                                            <imageReference key="image" image="wifi man grey" symbolScale="medium"/>
+                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="medium" weight="regular"/>
                                         </state>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
@@ -73,7 +73,7 @@
                                         <nil key="highlightedColor"/>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="color" keyPath="txtColor">
-                                                <color key="value" name="Text grey"/>
+                                                <color key="value" name="Secondary Grey"/>
                                             </userDefinedRuntimeAttribute>
                                             <userDefinedRuntimeAttribute type="boolean" keyPath="isFontWork" value="YES"/>
                                             <userDefinedRuntimeAttribute type="string" keyPath="txtStroke" value="bl"/>
@@ -130,17 +130,17 @@
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FtL-JB-NbO">
                                 <rect key="frame" x="8" y="18" width="359" height="50"/>
                                 <subviews>
-                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zbH-SQ-PJg" customClass="RoundCornerButton" customModule="Kismat_App" customModuleProvider="target">
-                                        <rect key="frame" x="321" y="10" width="30" height="30"/>
+                                    <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Baj-Qv-s2c" customClass="RoundCornerButton" customModule="Kismat_App" customModuleProvider="target">
+                                        <rect key="frame" x="8" y="10" width="30" height="30"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="30" id="35P-Tm-qtH"/>
-                                            <constraint firstAttribute="height" constant="30" id="4jd-gN-1ON"/>
+                                            <constraint firstAttribute="height" constant="30" id="8hg-4w-1m9"/>
+                                            <constraint firstAttribute="width" constant="30" id="S5F-xA-Pea"/>
                                         </constraints>
                                         <color key="tintColor" name="Secondary Grey"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal">
-                                            <imageReference key="image" image="girl" symbolScale="medium"/>
-                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="small" weight="light"/>
+                                            <imageReference key="image" image="wifi man grey" symbolScale="medium"/>
+                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="medium" weight="regular"/>
                                         </state>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
@@ -153,12 +153,12 @@
                                                 <real key="value" value="2"/>
                                             </userDefinedRuntimeAttribute>
                                             <userDefinedRuntimeAttribute type="color" keyPath="bgColor">
-                                                <color key="value" name="Secondary Grey"/>
+                                                <color key="value" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hi, Tamara" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cf5-Cq-dE3" customClass="fullyCustomLbl" customModule="Kismat_App" customModuleProvider="target">
-                                        <rect key="frame" x="21" y="9" width="276" height="32"/>
+                                        <rect key="frame" x="46" y="9" width="276" height="32"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="32" id="PbH-YN-4pz"/>
                                             <constraint firstAttribute="width" constant="276" id="uIK-yO-KKb"/>
@@ -180,13 +180,14 @@
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="zbH-SQ-PJg" secondAttribute="trailing" constant="8" id="1w4-lM-rEP"/>
+                                    <constraint firstItem="Cf5-Cq-dE3" firstAttribute="top" secondItem="FtL-JB-NbO" secondAttribute="top" constant="9" id="1Ys-yp-lJR"/>
+                                    <constraint firstAttribute="trailing" secondItem="Cf5-Cq-dE3" secondAttribute="trailing" constant="37" id="6gt-QU-skr"/>
                                     <constraint firstAttribute="height" constant="50" id="8mY-8T-MzH"/>
-                                    <constraint firstItem="Cf5-Cq-dE3" firstAttribute="centerY" secondItem="FtL-JB-NbO" secondAttribute="centerY" id="G05-q6-OI0"/>
-                                    <constraint firstItem="zbH-SQ-PJg" firstAttribute="leading" secondItem="Cf5-Cq-dE3" secondAttribute="trailing" constant="24" id="OlT-8j-Af9"/>
-                                    <constraint firstItem="zbH-SQ-PJg" firstAttribute="top" secondItem="FtL-JB-NbO" secondAttribute="top" constant="10" id="QLl-J7-aHX"/>
-                                    <constraint firstItem="Cf5-Cq-dE3" firstAttribute="centerX" secondItem="FtL-JB-NbO" secondAttribute="centerX" constant="-20.5" id="cIY-Tc-s5Z"/>
-                                    <constraint firstAttribute="bottom" secondItem="zbH-SQ-PJg" secondAttribute="bottom" constant="10" id="oSo-wD-S4F"/>
+                                    <constraint firstItem="Cf5-Cq-dE3" firstAttribute="leading" secondItem="Baj-Qv-s2c" secondAttribute="trailing" constant="8" symbolic="YES" id="LGQ-gr-VjP"/>
+                                    <constraint firstAttribute="bottom" secondItem="Baj-Qv-s2c" secondAttribute="bottom" constant="10" id="Rfh-Xx-Xfa"/>
+                                    <constraint firstAttribute="bottom" secondItem="Cf5-Cq-dE3" secondAttribute="bottom" constant="9" id="nbt-2A-sFm"/>
+                                    <constraint firstItem="Baj-Qv-s2c" firstAttribute="top" secondItem="FtL-JB-NbO" secondAttribute="top" constant="10" id="r8l-8g-j81"/>
+                                    <constraint firstItem="Baj-Qv-s2c" firstAttribute="leading" secondItem="FtL-JB-NbO" secondAttribute="leading" constant="8" id="xLv-T1-cDg"/>
                                 </constraints>
                             </view>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cn8-Nl-EBJ">
@@ -196,7 +197,7 @@
                                         <rect key="frame" x="306" y="36" width="35" height="20"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Vbi-XH-pNM">
-                                                <rect key="frame" x="9.6666666666666661" y="2.333333333333333" width="22" height="22"/>
+                                                <rect key="frame" x="9.6666666666666856" y="2.3333333333333393" width="22" height="21.999999999999996"/>
                                                 <color key="tintColor" name="Primary Yellow"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="22.333333333333325" id="L8c-U3-1X1"/>
@@ -508,7 +509,7 @@
                 <outlet property="viewCountsLbl" destination="pXu-df-J1k" id="YjA-1D-4FB"/>
                 <outlet property="viewedprofLbl" destination="v2n-8t-cBj" id="nRw-u1-PXa"/>
                 <outlet property="welcomeHeaderLbl" destination="Cf5-Cq-dE3" id="f8c-8d-sIy"/>
-                <outlet property="welcomePicBtn" destination="zbH-SQ-PJg" id="a7E-3m-sUe"/>
+                <outlet property="welcomePicBtn" destination="Baj-Qv-s2c" id="y2S-2c-Cug"/>
                 <outlet property="welcomeView" destination="FtL-JB-NbO" id="gtR-56-xqB"/>
             </connections>
             <point key="canvasLocation" x="52.671755725190835" y="66.197183098591552"/>
@@ -520,6 +521,9 @@
         </designable>
         <designable name="A8B-bt-df2">
             <size key="intrinsicContentSize" width="337.33333333333331" height="20.333333333333332"/>
+        </designable>
+        <designable name="Baj-Qv-s2c">
+            <size key="intrinsicContentSize" width="162" height="152"/>
         </designable>
         <designable name="Cf5-Cq-dE3">
             <size key="intrinsicContentSize" width="81" height="20.333333333333332"/>
@@ -537,7 +541,7 @@
             <size key="intrinsicContentSize" width="151.33333333333334" height="20.333333333333332"/>
         </designable>
         <designable name="nax-I1-dp4">
-            <size key="intrinsicContentSize" width="407" height="612"/>
+            <size key="intrinsicContentSize" width="162" height="152"/>
         </designable>
         <designable name="nzF-aI-iJF">
             <size key="intrinsicContentSize" width="211" height="20.333333333333332"/>
@@ -548,9 +552,6 @@
         <designable name="v2n-8t-cBj">
             <size key="intrinsicContentSize" width="207.66666666666666" height="20.333333333333332"/>
         </designable>
-        <designable name="zbH-SQ-PJg">
-            <size key="intrinsicContentSize" width="407" height="612"/>
-        </designable>
     </designables>
     <resources>
         <image name="bell.badge.fill" catalog="system" width="123" height="128"/>
@@ -559,6 +560,7 @@
         <image name="magnifyingglass" catalog="system" width="128" height="117"/>
         <image name="star.fill" catalog="system" width="128" height="116"/>
         <image name="tooltip_icon" width="48" height="48"/>
+        <image name="wifi man grey" width="162" height="152"/>
         <namedColor name="Danger">
             <color red="0.92500001192092896" green="0.30199998617172241" blue="0.30199998617172241" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
